<resources>
    <string name="app_name">Postover</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="login">Log In</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Forgot_password">Forgot password?</string>
    <string name="Log_in_with">Log In With</string>
    <string name="Google">Google</string>
    <string name="Facebook">Facebook</string>
    <string name="Twitter">Twitter</string>
    <string name="or">or</string>
    <string name="mail">email</string>
    <string name="continue_as_guest">Continue as Guest</string>
    <string name="Register">Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="to_do_list">To do List</string>
    <string name="notes">Notes</string>
    <string name="calendar">Calendar</string>
    <string name="menu">menu</string>
    <string name="todo">TODO</string>
    <string name="todo_button">Todo</string>
    <string name="notes_button">Notes</string>
    <string name="calendar_button">Calendar</string>
    <string name="mysplashscreen">mysplashscreen</string>
    <string name="title">TITULO</string>
    <string name="secondary_text">texto secundario</string>
    <string name="supporting_text">texto de la nota bla bla bla bla bla bla</string>
    <string name="EditarHomeNote">Editar</string>
    <string name="BorrarHomeNote">Borrar</string>
    <string name="floatingbutton" />
    <string name="signout_button">Sign out</string>
    <string name="facebook_app_id">758943588156580</string>
    <string name="fb_login_protocol_scheme">fb758943588156580</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources>