<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ActivityRegister"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:layout_marginTop="260dp"
            android:id="@+id/pt_fullnameRegister"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="Name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/pt_usernameRegister"
            android:layout_width="326dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/Username"

            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/pt_mailRegister"
            android:layout_width="327dp"

            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="Mail"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/pt_TextPassword"
            android:layout_width="327dp"

            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/Password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/button_register_final"
            android:layout_width="146dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Register"
            android:layout_marginTop="100dp"
            android:textAllCaps="false"
            android:textColor="#FFF6F6"
            android:textSize="16sp"
            app:backgroundTint="#BA0000"
            app:rippleColor="#FBF8F8" />

        <TextView
            android:id="@+id/TV_member"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="I'm a member already"
            android:layout_marginTop="10dp"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>